Fixed locoScroll scrollbar z-index issue

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -78,6 +78,9 @@
 }
 
 @layer components {
+  .c-scrollbar {
+    z-index: 10;
+  }
 }
 
 @layer utilities {
